@@ -84,8 +84,7 @@ class FSSTXMethod(FSObject):
     _owner = None # unowned
 
     manage_options=({'label' : 'Customize','action' : 'manage_main'},
-                    {'label' : 'View','action' : '',
-                     'help' : ('OFSP' ,'DTML-DocumentOrMethod_View.stx')},
+                    {'label' : 'View','action' : ''},
                    )
 
     security = ClassSecurityInfo()
